Chapter 3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: jokeapi-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jokeapi
            port:
              number: 80
